--- a/Day1/5. SARSA-QLEARNING/SARSA-QLEARNING.ipynb
+++ b/Day1/5. SARSA-QLEARNING/SARSA-QLEARNING.ipynb
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "f7c60061",
    "metadata": {},
    "outputs": [
@@ -2724,6 +2724,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "75ace5ab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "window = 3\n",
+    "smoothed = np.convolve(rewards_sarsa, np.ones(window)/window, mode='valid')\n",
+    "\n",
+    "plt.figure(figsize=(8, 5))\n",
+    "plt.plot(episodes_sarsa[:len(smoothed)], smoothed, color='orange', linewidth=2)\n",
+    "plt.title(\"Smoothed Q-Learning Reward\")\n",
+    "plt.xlabel(\"Episodes\")\n",
+    "plt.ylabel(\"Smoothed Average Reward\")\n",
+    "plt.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "49af0685",
    "metadata": {},
@@ -2733,11 +2754,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "be372a54",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# load the trained Q-table\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m Q_loaded \u001b[38;5;241m=\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39mload(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmodels/Q_sarsa.npy\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      4\u001b[0m env \u001b[38;5;241m=\u001b[39m gym\u001b[38;5;241m.\u001b[39mmake(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTaxi-v3\u001b[39m\u001b[38;5;124m\"\u001b[39m, render_mode\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mansi\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Greedy policy\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# load the trained Q-table\n",
+    "Q_loaded = np.load(\"models/Q_sarsa.npy\")\n",
+    "\n",
+    "env = gym.make(\"Taxi-v3\", render_mode=\"ansi\")\n",
+    "\n",
+    "# Greedy policy\n",
+    "def greedy(Q, s):\n",
+    "    return np.argmax(Q[s])\n",
+    "\n",
+    "# Test the trained agent\n",
+    "state, info = env.reset()\n",
+    "done = False\n",
+    "total_reward = 0\n",
+    "\n",
+    "while not done:\n",
+    "    action = greedy(Q_loaded, state)\n",
+    "    next_state, reward, terminated, truncated, info = env.step(action)\n",
+    "    done = terminated or truncated\n",
+    "    total_reward += reward\n",
+    "    print(env.render())  # text visualization\n",
+    "    state = next_state\n",
+    "\n",
+    "print(f\"\\nTotal reward: {total_reward}\")\n",
+    "env.close()"
+   ]
   },
   {
    "cell_type": "markdown",
