--- a/Day2/Fundamentals/Fundamentals.ipynb
+++ b/Day2/Fundamentals/Fundamentals.ipynb
@@ -54,62 +54,7 @@
    "execution_count": null,
    "id": "96361cb2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: matplotlib in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (3.10.7)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (1.3.2)\n",
-      "Requirement already satisfied: cycler>=0.10 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (0.12.1)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (4.60.1)\n",
-      "Requirement already satisfied: kiwisolver>=1.3.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (1.4.9)\n",
-      "Requirement already satisfied: numpy>=1.23 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (2.2.6)\n",
-      "Requirement already satisfied: packaging>=20.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (25.0)\n",
-      "Requirement already satisfied: pillow>=8 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (12.0.0)\n",
-      "Requirement already satisfied: pyparsing>=3 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (3.2.5)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: torch in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (2.9.0)\n",
-      "Requirement already satisfied: filelock in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (3.20.0)\n",
-      "Requirement already satisfied: typing-extensions>=4.10.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (4.15.0)\n",
-      "Requirement already satisfied: sympy>=1.13.3 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (1.14.0)\n",
-      "Requirement already satisfied: networkx>=2.5.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (3.4.2)\n",
-      "Requirement already satisfied: jinja2 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (3.1.6)\n",
-      "Requirement already satisfied: fsspec>=0.8.5 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (2025.9.0)\n",
-      "Requirement already satisfied: nvidia-cuda-nvrtc-cu12==12.8.93 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cuda-runtime-cu12==12.8.90 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cuda-cupti-cu12==12.8.90 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-cudnn-cu12==9.10.2.21 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (9.10.2.21)\n",
-      "Requirement already satisfied: nvidia-cublas-cu12==12.8.4.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.4.1)\n",
-      "Requirement already satisfied: nvidia-cufft-cu12==11.3.3.83 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (11.3.3.83)\n",
-      "Requirement already satisfied: nvidia-curand-cu12==10.3.9.90 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (10.3.9.90)\n",
-      "Requirement already satisfied: nvidia-cusolver-cu12==11.7.3.90 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (11.7.3.90)\n",
-      "Requirement already satisfied: nvidia-cusparse-cu12==12.5.8.93 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.5.8.93)\n",
-      "Requirement already satisfied: nvidia-cusparselt-cu12==0.7.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (0.7.1)\n",
-      "Requirement already satisfied: nvidia-nccl-cu12==2.27.5 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (2.27.5)\n",
-      "Requirement already satisfied: nvidia-nvshmem-cu12==3.3.20 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (3.3.20)\n",
-      "Requirement already satisfied: nvidia-nvtx-cu12==12.8.90 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.90)\n",
-      "Requirement already satisfied: nvidia-nvjitlink-cu12==12.8.93 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (12.8.93)\n",
-      "Requirement already satisfied: nvidia-cufile-cu12==1.13.1.3 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (1.13.1.3)\n",
-      "Requirement already satisfied: triton==3.5.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from torch) (3.5.0)\n",
-      "Requirement already satisfied: mpmath<1.4,>=1.1.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from sympy>=1.13.3->torch) (1.3.0)\n",
-      "Requirement already satisfied: MarkupSafe>=2.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from jinja2->torch) (3.0.3)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: numpy in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (2.2.6)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: gymnasium in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (1.2.1)\n",
-      "Requirement already satisfied: numpy>=1.21.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from gymnasium) (2.2.6)\n",
-      "Requirement already satisfied: cloudpickle>=1.2.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from gymnasium) (3.1.1)\n",
-      "Requirement already satisfied: typing-extensions>=4.3.0 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from gymnasium) (4.15.0)\n",
-      "Requirement already satisfied: farama-notifications>=0.0.1 in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (from gymnasium) (0.0.4)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n",
-      "Requirement already satisfied: pygame in /home/mwlgt/Documents/LARS-RL-TUTORIAL/.venv/lib/python3.10/site-packages (2.6.1)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "\n",
@@ -147,18 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "8a243504",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "cuda\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Select cartpole environment\n",
     "env = gym.make(\"CartPole-v1\",render_mode=\"human\")\n",
@@ -195,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "da0159da",
    "metadata": {},
    "outputs": [],
@@ -233,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4bc34745",
    "metadata": {},
    "outputs": [],
@@ -270,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "3d41912a",
    "metadata": {},
    "outputs": [],
@@ -312,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "c6fdb8f8",
    "metadata": {},
    "outputs": [],
@@ -343,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "937a218b",
    "metadata": {},
    "outputs": [],
@@ -387,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0cb370da",
    "metadata": {},
    "outputs": [],
@@ -440,6 +377,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8717e240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "value = torch.Tensor([1])\n",
+    "value.view(1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e870b0b7",
    "metadata": {},
@@ -449,31 +397,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "6eda35a0",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[9], line 13\u001b[0m\n\u001b[1;32m     11\u001b[0m action \u001b[38;5;241m=\u001b[39m select_action(state)\n\u001b[1;32m     12\u001b[0m observation, reward, terminated, truncated, _ \u001b[38;5;241m=\u001b[39m env\u001b[38;5;241m.\u001b[39mstep(action\u001b[38;5;241m.\u001b[39mitem())\n\u001b[0;32m---> 13\u001b[0m reward \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mreward\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     14\u001b[0m done \u001b[38;5;241m=\u001b[39m terminated \u001b[38;5;129;01mor\u001b[39;00m truncated\n\u001b[1;32m     15\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m terminated:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 640x480 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if torch.cuda.is_available() or torch.backends.mps.is_available():\n",
     "    num_episodes = 600\n",
