--- a/Day2/PPO/PPO.ipynb
+++ b/Day2/PPO/PPO.ipynb
@@ -141,7 +141,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_env = GymEnv(\"InvertedPendulum-v5\", device=device, render_mode=\"human\")"
+    "base_env = GymEnv(\"InvertedPendulum-v5\", device=device)"
    ]
   },
   {
@@ -505,7 +505,7 @@
    "id": "43801e09",
    "metadata": {},
    "source": [
-    "### Resuslts"
+    "### Results"
    ]
   },
   {
