--- a/Day2/PPO/PPO.ipynb
+++ b/Day2/PPO/PPO.ipynb
@@ -21,9 +21,11 @@
     "\n",
     "### How does PPO do this?\n",
     "\n",
-    "From Proximal Polyicy Optimization paper by OpenAI: https://doi.org/10.48550/arXiv.1707.06347\n",
+    "From Proximal Policy Optimization paper by OpenAI: https://doi.org/10.48550/arXiv.1707.06347\n",
     "\n",
     "![Alt text](PPODescription.png)\n",
+    "\n",
+    "$$r_{t}(\\theta)=/frac{\\pi_{\\theta}(a_{t}|s_{t})}{\\pi_{\\theta_{old}}(a_{t}|s_{t})}$$\n",
     "\n",
     "### Why PPO?\n",
     "\n",
@@ -208,7 +210,7 @@
    "source": [
     "#### Defining the policy network\n",
     "\n",
-    "The policy network is what is considered as the actor in the PPO algorith. Here, the neural network produces two outputs of the size of the action space. This includes a location output and a scale output. The scale output is fixed to be positive. To fit both of these outputs in the neural network, the last transformation maps to a size of 2 times the action space size. The other tansformation are simply the number of cells, or neurons in the neural network, which were defined earlier,"
+    "The policy network is what is considered as the actor in the PPO algorithm. Here, the neural network produces two outputs of the size of the action space. This includes a location output and a scale output. The scale output is fixed to be positive. To fit both of these outputs in the neural network, the last transformation maps to a size of 2 times the action space size. The other transformation are simply the number of cells, or neurons in the neural network, which were defined earlier,"
    ]
   },
   {
@@ -376,7 +378,7 @@
     "\n",
     "For PPO to function, there needs to exist an advantage estimation, which balances bias and variance. Here, we will use TorchRL's GAE (general advantage estimator) module, which uses the value network defined previously.\n",
     "\n",
-    "Next, TorchRL's ClipPPOLoss is used to penalize certain actions according to PPO theory. For more details, check open AI's paper."
+    "Next, TorchRL's ClipPPOLoss is used to limit going too far from the current policy."
    ]
   },
   {
