Finalized dependency and Google Colab Instructions for DQN and PPO

--- a/Day2/RL_Fundamentals_DQN/RL_Fundamentals_DQN.ipynb
+++ b/Day2/RL_Fundamentals_DQN/RL_Fundamentals_DQN.ipynb
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# Select cartpole environment\n",
-    "env = gym.make(\"CartPole-v1\")\n",
+    "env = gym.make(\"CartPole-v1\", render_mode='human')\n",
     "\n",
     "\n",
     "# set up matplotlib\n",
@@ -424,11 +424,40 @@
     "            episode_durations.append(t + 1)\n",
     "            plot_durations()\n",
     "            break\n",
-    "\n",
     "print('Complete')\n",
     "plot_durations(show_result=True)\n",
     "plt.ioff()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d9ccec3",
+   "metadata": {},
+   "source": [
+    "#### Run the following block to close the environment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cdf274da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66b45342",
+   "metadata": {},
+   "source": [
+    "#### Additional References\n",
+    "\n",
+    "For more information about the code used in this section, look at Pytorch docs, primarily:\n",
+    "\n",
+    "_Reinforcement Learning (DQN) Tutorial_ (2017). Pytorch. https://docs.pytorch.org/tutorials/intermediate/reinforcement_q_learning.html "
    ]
   }
  ],
